# ==============================================================================
# {{project_slug}} — pyproject.toml
# ------------------------------------------------------------------------------
# PEP 621 metadata + tooling config for a basic Animica contract (Python VM).
# - Uses setuptools as the backend (simple, ubiquitous).
# - Keeps runtime deps empty (contracts compile to IR; no on-chain runtime here).
# - Dev extras wire in vm_py and the Python SDK for local compile/simulate/deploy.
#
# How to work locally (recommended during development):
#   python -m venv .venv && . .venv/bin/activate
#   pip install -e ".[dev]"         # brings in vm_py (if available), sdk, pytest, ruff, mypy
#
# If you're inside the monorepo, pip will resolve vm_py and omni_sdk from their
# editable packages automatically *if* you run from the repo root after a workspace
# install. Otherwise, set the env vars below to point at local copies:
#   export VM_PY_PATH=/absolute/path/to/vm_py
#   export SDK_PY_PATH=/absolute/path/to/sdk/python
# Then install:
#   pip install -e ".[dev]" --config-settings=VM_PY_PATH=$VM_PY_PATH --config-settings=SDK_PY_PATH=$SDK_PY_PATH
#
# Alternatively, replace the editable path pins below with published package names
# when official wheels are available.
# ==============================================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ project_slug }}"
version = "0.1.0"
description = "{{ project_description | default('Animica smart contract (Python-VM) scaffold') }}"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "{{ author_name | default('Animica Labs') }}", email = "{{ author_email | default('dev@animica.example') }}" }
]
keywords = ["animica", "blockchain", "smart-contract", "python-vm", "abi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]
# Contracts themselves have no import-time runtime dependencies.
dependencies = []

# Optional dev-time dependencies:
# - vm_py: compiler + in-memory interpreter for local tests
# - omni_sdk: JSON-RPC client & helpers to deploy/call from Python
# By default these resolve from local paths if VM_PY_PATH / SDK_PY_PATH are set,
# otherwise you can swap them for published package names when available.
[project.optional-dependencies]
dev = [
  # ---- local editable links (preferred in monorepo or when hacking locally) ----
  # The unusual "file:///" triple-slash form makes pip happy with absolute paths.
  # The following two lines are *templates* that pip will expand when you pass
  # --config-settings values as shown in the header comment.
  "vm_py @ file:///${VM_PY_PATH}",
  "omni_sdk @ file:///${SDK_PY_PATH}",

  # ---- test & tooling ----
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.8",
  "mypy>=1.11",
  "types-setuptools>=69.5.0.20240519",
  "msgspec>=0.18.6",  # used in examples/tests for ABI/IR helpers
  "cbor2>=5.6.0",
]

# Optional convenience console scripts.
# You can uncomment these once vm_py is available on your path.
# [project.scripts]
# contract-build = "vm_py.cli.compile:main"
# contract-run   = "vm_py.cli.run:main"
# contract-ir    = "vm_py.cli.inspect_ir:main"

[tool.setuptools]
# Pure-Python project: package is just your contract sources and any helpers.
# If you keep contracts under "src/", flip packages.find.include accordingly.
packages = []
include-package-data = false

# ------------------------------------------------------------------------------
# Testing & quality tools
# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.2"
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "--maxfail=1",
]
testpaths = [
  "tests",
]
python_files = ["test_*.py", "*_tests.py", "tests_*.py"]
filterwarnings = [
  "error::DeprecationWarning",
  "ignore::UserWarning:msgspec.*",
]

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = [
  "E", "F", "W",         # pycodestyle/pyflakes
  "I",                   # isort
  "UP",                  # pyupgrade
  "B",                   # flake8-bugbear
  "C90",                 # mccabe
  "PL",                  # pylint (subset via ruff)
  "N",                   # pep8-naming
]
lint.ignore = [
  "D",                   # pydocstyle (docstrings optional for tiny examples)
  "ANN",                 # type annotation coverage enforced by mypy instead
]
lint.mccabe.max-complexity = 10
lint.isort.known-first-party = ["{{ project_slug }}"]
format.preview = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
cache_dir = ".mypy_cache"
# allow contracts to be small, well-typed modules
implicit_reexport = false
warn_return_any = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ------------------------------------------------------------------------------
# Editable path knobs (used by pip when installing the [dev] extra)
# Example:
#   pip install -e ".[dev]" --config-settings=VM_PY_PATH=/abs/path/to/vm_py \
#                           --config-settings=SDK_PY_PATH=/abs/path/to/sdk/python
# If not set, pip may attempt to interpret them as invalid file URLs; in that
# case, install vm_py and omni_sdk separately first, then run:
#   pip install -e ".[dev]"
# ------------------------------------------------------------------------------
[tool.setuptools.dynamic]
# no dynamic fields; section present for completeness

[tool.pip]
# These keys are not standard pyproject; present as documentation hints only.

