[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "{{ project_slug }}"
version = "0.1.0"
description = "Lightweight Animica indexer: backfill + live tail, SQL persistence, optional API & metrics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Animica Contributors" }]
keywords = ["animica", "blockchain", "indexer", "rpc", "websocket", "sqlalchemy", "prometheus", "fastapi"]

# Core, minimal runtime deps (API is optional; see [project.optional-dependencies])
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
  "anyio>=4.0.0",
  "pydantic>=2.5.0",
  "SQLAlchemy>=2.0.25",
  "alembic>=1.13.0",
  "typer>=0.9.0",
  "prometheus-client>=0.17.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.3",
  "orjson>=3.9.10",
  "structlog>=24.1.0",
  "uvloop>=0.19.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
# Enable the built-in read-only HTTP API
api = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

# Postgres driver (use 'psycopg[binary]' for easy install; switch to 'psycopg[c]' if you need libpq)
pg = ["psycopg[binary]>=3.1.18"]

# Developer tooling (tests, linting, typing). Pulls in API & PG extras for local runs.
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240622",
  "httpx>=0.27.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "psycopg[binary]>=3.1.18",
]

[project.urls]
Homepage = "https://github.com/animica-labs/animica"
Documentation = "https://github.com/animica-labs/animica#readme"
Issues = "https://github.com/animica-labs/animica/issues"

# Optional console entrypoint. You can also use "python -m {{module_name}}.cli".
[project.scripts]
{{ project_slug }} = "{{ module_name }}.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
  { include = "{{ module_name }}", from = "src" }
]

[tool.hatch.metadata]
allow-direct-references = true

# ---- Tooling configuration (kept intentionally light; override as you wish) ----

[tool.pytest.ini_options]
addopts = "-q -ra --disable-warnings"
testpaths = ["tests"]
markers = [
  "integration: tests that hit a live node",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = [
  "E", "F", "I",  # pycodestyle/pyflakes/isort
  "B",           # flake8-bugbear
  "UP",          # pyupgrade
]
lint.ignore = [
  "E203",        # whitespace before ':', conflicts with black style if you adopt it
]
format.preview = true

[tool.mypy]
python_version = "3.11"
packages = ["{{ module_name }}"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
plugins = []

[tool.coverage.run]
branch = true
source = ["src/{{ module_name }}"]

[tool.coverage.report]
show_missing = true
skip_empty = true
