[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "{{ project_slug }}"
version = "0.1.0"
description = "{{ project_description }}"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "{{ license }}" }
authors = [{ name = "{{ author_name }}", email = "{{ author_email }}" }]
keywords = [
  "animica", "data-availability", "oracle", "fastapi",
  "nmt-root", "commitment", "sdk", "da", "crypto"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: {{ license }}",
  "Typing :: Typed",
  "Framework :: FastAPI"
]

# Runtime deps: FastAPI service + Animica SDK + utilities
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "msgspec>=0.18.6",
  "python-dotenv>=1.0.1",
  "prometheus-client>=0.20.0",
  # Animica Python SDK (import name: omni_sdk). If not on PyPI in your env,
  # replace with a local path or VCS URL (e.g. "omni-sdk @ file:///path/to/sdk/python").
  "omni-sdk>=0.1.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "anyio>=4.4.0",
  "types-requests>=2.32.0.20240712"
]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "anyio>=4.4.0"
]
lint = [
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[project.urls]
Homepage = "{{ homepage_url }}"
Repository = "{{ repository_url }}"
Issues = "{{ issues_url }}"
Documentation = "{{ docs_url }}"

[project.scripts]
# Launch the API server (reads env like RPC_URL/CHAIN_ID/PORT)
{{ project_slug }}-serve = "{{ py_package }}.server:main"

[tool.hatch.build.targets.wheel]
packages = ["{{ py_package }}"]

[tool.hatch.build.targets.sdist]
include = [
  "{{ py_package }}/**",
  "README.md",
  ".env.example",
  "Dockerfile",
  "Makefile",
  "k8s/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "UP"   # pyupgrade
]
ignore = ["E402"] # allow module-level imports after env setup in server modules

[tool.ruff.lint.isort]
known-first-party = ["{{ py_package }}"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
  "^tests/.*",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -ra --maxfail=1"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["{{ py_package }}"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
