# Contracts subproject for the {{ project_slug }} fullstack monorepo.
# Focused on local linting/type-checking and (optionally) compiling contracts with the VM.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ project_slug | replace('-', '_') }}_contracts"
version = "0.1.0"
description = "Smart contracts (Python VM) for the {{ project_slug }} monorepo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "{{ author | default('you') }}" }]

# Keep runtime deps empty; most work here is source-only (compiled/packed by tooling).
dependencies = []

[project.optional-dependencies]
# Dev tools used locally. Install with:
#   pip install -e .[dev]
dev = [
  "ruff==0.6.9",
  "mypy==1.11.2",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "msgspec==0.18.6",   # used by encoders/decoders in some helpers
  "cbor2==5.6.4"
]

# Tooling group for local compile/run against the Python VM & SDK (if available on PyPI or via a path override).
# Install with:
#   pip install -e .[tooling]
tooling = [
  "animica-vm-py>=0.1.0 ; python_version >= '3.11'",
  "omni-sdk>=0.1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
# E,F: pycodestyle/pyflakes, I: isort, UP: pyupgrade, N: pep8-naming,
# B: flake8-bugbear, PIE: flake8-pie, T20: print statements, RUF: Ruff rules
select = ["E", "F", "I", "UP", "N", "B", "PIE", "T20", "RUF"]
ignore = [
  "E203",  # whitespace before ':', conflicts with some formatters
  "E266",  # too many leading '#' for block comments
  "E501"   # line length (handled by formatter if used)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["contracts"]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = true
